force-app/main/default/objects/zold_Budget_SK_Allocation__c/zold_Budget_SK_Allocation__c.object-meta.xml
<CustomObject>
    <label>zold_Budget SK Allocation</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Budget SK Allocations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zold_Budget SK Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>