force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <label>AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>