force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/CWS__c.field-meta.xml
<CustomField>
    <fullName>CWS__c</fullName>
    <label>CWS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>