force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/Lube__c.field-meta.xml
<CustomField>
    <fullName>Lube__c</fullName>
    <label>Lube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>