force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/Oil__c.field-meta.xml
<CustomField>
    <fullName>Oil__c</fullName>
    <label>Oil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>