force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/OW__c.field-meta.xml
<CustomField>
    <fullName>OW__c</fullName>
    <label>OW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>