force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/PW__c.field-meta.xml
<CustomField>
    <fullName>PW__c</fullName>
    <label>PW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>