force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/SK__c.field-meta.xml
<CustomField>
    <fullName>SK__c</fullName>
    <label>SK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>