force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipName>Budget_SK_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>