force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/TPM__c.field-meta.xml
<CustomField>
    <fullName>TPM__c</fullName>
    <label>TPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>