force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/VAC__c.field-meta.xml
<CustomField>
    <fullName>VAC__c</fullName>
    <label>VAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>