force-app/main/default/objects/zold_Budget_SK_Allocation__c/fields/ZIP_Master__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZIP Master</label>
    <referenceTo>ZIP_Master__c</referenceTo>
    <relationshipName>Budget_SK_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>