force-app/main/default/objects/zold_Budget_SK_Allocation__c/recordTypes/Budget_SK_Account.recordType-meta.xml
<RecordType>
    <fullName>Budget_SK_Account</fullName>
    <active>true</active>
    <description>Budget SK Account</description>
    <label>Budget SK Account</label>
</RecordType>