force-app/main/default/objects/zold_Budget_SK_Allocation__c/recordTypes/Budget_SK_Zip.recordType-meta.xml
<RecordType>
    <fullName>Budget_SK_Zip</fullName>
    <active>true</active>
    <description>Budget SK Zip</description>
    <label>Budget SK Zip</label>
</RecordType>